Исправляет ширину в соц иконках

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <ul class="social">
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -170,7 +170,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                       </svg>
                     </a>
@@ -178,7 +178,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -186,7 +186,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -204,7 +204,7 @@
                 <ul class="social">
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -212,7 +212,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                       </svg>
                     </a>
@@ -220,7 +220,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -228,7 +228,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -248,7 +248,7 @@
                 <ul class="social">
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -256,7 +256,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                       </svg>
                     </a>
@@ -264,7 +264,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -272,7 +272,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -290,7 +290,7 @@
                 <ul class="social">
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -298,7 +298,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                       </svg>
                     </a>
@@ -306,7 +306,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -314,7 +314,7 @@
 
                   <li class="social-img">
                     <a href="">
-                      <svg class="icon-social" widht="20" height="20">
+                      <svg class="icon-social" width="20" height="20">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -334,7 +334,7 @@
           <ul class="clients">
             <li class="clients-item">
               <a href="">
-                <svg class="icon-clients" widht="44.3" height="49.2">
+                <svg class="icon-clients" width="44.3" height="49.2">
                   <use href="./img/symbol-defs.svg#icon-Client1"></use>
                 </svg>
               </a>
@@ -342,7 +342,7 @@
 
             <li class="clients-item">
               <a href="">
-                <svg class="icon-clients" widht="40" height="52">
+                <svg class="icon-clients" width="40" height="52">
                   <use href="./img/symbol-defs.svg#icon-Client2"></use>
                 </svg>
               </a>
@@ -350,7 +350,7 @@
 
             <li class="clients-item">
               <a href="">
-                <svg class="icon-clients" widht="41" height="42.6">
+                <svg class="icon-clients" width="41" height="42.6">
                   <use href="./img/symbol-defs.svg#icon-Client3"></use>
                 </svg>
               </a>
@@ -358,7 +358,7 @@
 
             <li class="clients-item">
               <a href="">
-                <svg class="icon-clients" widht="80" height="42">
+                <svg class="icon-clients" width="80" height="42">
                   <use href="./img/symbol-defs.svg#icon-Client4"></use>
                 </svg>
               </a>
@@ -366,7 +366,7 @@
 
             <li class="clients-item">
               <a href="">
-                <svg class="icon-clients" widht="60" height="47">
+                <svg class="icon-clients" width="60" height="47">
                   <use href="./img/symbol-defs.svg#icon-Client5"></use>
                 </svg>
               </a>
@@ -374,7 +374,7 @@
 
             <li class="clients-item">
               <a href="">
-                <svg class="icon-clients" widht="88.5" height="45.5">
+                <svg class="icon-clients" width="88.5" height="45.5">
                   <use href="./img/symbol-defs.svg#icon-Client6"></use>
                 </svg>
               </a>
@@ -404,28 +404,28 @@
           <ul class="social">
             <li class="circle">
               <a href="" aria-label="Ссылка на Instagram">
-                <svg widht="20" height="20">
+                <svg width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="circle">
               <a href="" aria-label="Ссылка на Twitter">
-                <svg widht="20" height="20">
+                <svg width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                 </svg>
               </a>
             </li>
             <li class="circle">
               <a href="" aria-label="Ссылка на Facebook">
-                <svg widht="20" height="20">
+                <svg width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="circle">
               <a href="" aria-label="Ссылка на Linkedin">
-                <svg widht="20" height="20">
+                <svg width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
