--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 
         <ul class="auth-nav">
           <li class="auth-con">
-            <svg widht="16" height="11.2">
+            <svg class="envelope">
               <use href="./img/symbol-defs.svg#icon-envelope"></use>
             </svg>
             <a href="mailto:info@devstudio.com" class="links"
@@ -45,7 +45,7 @@
           </li>
 
           <li class="auth-smart">
-            <svg widht="10" height="15">
+            <svg class="smart">
               <use href="./img/symbol-defs.svg#icon-smartphone"></use>
             </svg>
             <a href="tel:+380961111111" class="links">+38 096 111 11 11</a>
@@ -241,28 +241,28 @@
           <ul class="social">
             <li class="circle">
               <a href="" aria-label="Ссылка на Instagram">
-                <svg widht="20" height="20">
+                <svg width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="circle">
               <a href="" aria-label="Ссылка на Twitter">
-                <svg widht="20" height="20">
+                <svg width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-tvitter"></use>
                 </svg>
               </a>
             </li>
             <li class="circle">
               <a href="" aria-label="Ссылка на Facebook">
-                <svg widht="20" height="20">
+                <svg width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="circle">
               <a href="" aria-label="Ссылка на Linkedin">
-                <svg widht="20" height="20">
+                <svg width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
