--- a/index.html
+++ b/index.html
@@ -68,14 +68,17 @@
 
       <!--Приемущества-->
       <section class="section-features">
-        <!--<h2 class="section-title">Наши приемущества</h2>-->
-        <!--этот заголовок будет скрыт-->
         <div class="container">
           <ul class="features">
-            <li class="features-itam icon-antena">
-              <!--<div class="advantages">
-                <img src="./img/antenna.svg" alt="Антена" />
-              </div>-->
+            <li class="features-itam">
+              <div class="features-svg">
+                <svg width="70" height="70">
+                  <use
+                    class="features-icon"
+                    href="./img/symbol-defs.svg#icon-antenna"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -83,10 +86,15 @@
               </p>
             </li>
 
-            <li class="features-itam icon-clock">
-              <!--<div class="advantages">
-                <img src="./img/clock.svg" alt="Часы" />
-              </div>-->
+            <li class="features-itam">
+              <div class="features-svg">
+                <svg width="70" height="70">
+                  <use
+                    class="features-icon"
+                    href="./img/symbol-defs.svg#icon-clock"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -94,10 +102,15 @@
               </p>
             </li>
 
-            <li class="features-itam icon-diagram">
-              <!-- <div class="advantages">
-                  <img src="./img/diagram.svg" alt="Диаграмма" />
-              </div>-->
+            <li class="features-itam">
+              <div class="features-svg">
+                <svg width="70" height="70">
+                  <use
+                    class="features-icon"
+                    href="./img/symbol-defs.svg#icon-diagram"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-title">ПЛАНИРОВАНИЕ</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
@@ -105,10 +118,15 @@
               </p>
             </li>
 
-            <li class="features-itam icon-astronaut">
-              <!--<div class="advantages">
-                <img src="./img/astronaut.svg" alt="Астронавт" />
-              </div>-->
+            <li class="features-itam">
+              <div class="features-svg">
+                <svg width="70" height="70">
+                  <use
+                    class="features-icon"
+                    href="./img/symbol-defs.svg#icon-astronaut"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
